syntax = "proto3";
package protofiles;

option go_package = "github.com/mehulsuthar-000/grpcExample/protofiles";

message TransactionRequest {
    string from = 1;
    string to = 2;
    float amount = 3;
}

message TransactionResponse {
    bool confirmation = 1;
}

service MoneyTransaction {
    rpc MakeTransaction(TransactionRequest) returns (TransactionResponse) {}
}